unpackaged/main/default/objects/Account/fields/A_B_Test_Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>A_B_Test_Customer_Segmentation__c</fullName>
    <description>used for some A/B Testing from Customer Marketing</description>
    <label>A/B Test Customer Segmentation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>