unpackaged/main/default/objects/Account/fields/Account_has_SI__c.field-meta.xml
<CustomField>
    <fullName>Account_has_SI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account_has_SI</label>
    <type>Checkbox</type>
</CustomField>