unpackaged/main/default/objects/Account/fields/Account_is_lift_relevant__c.field-meta.xml
<CustomField>
    <fullName>Account_is_lift_relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account_is_lift_relevant</label>
    <type>Checkbox</type>
</CustomField>