unpackaged/main/default/objects/Account/fields/Account_Manager_Email_Readonly__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Email_Readonly__c</fullName>
    <formula>Account_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Manager Email Readonly</label>
    <type>Text</type>
</CustomField>