unpackaged/main/default/objects/Account/fields/Account_Owner_Readonly__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Readonly__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>