unpackaged/main/default/objects/Account/fields/Account_OwnerEmail_Readonly__c.field-meta.xml
<CustomField>
    <fullName>Account_OwnerEmail_Readonly__c</fullName>
    <formula>Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account OwnerEmail Readonly</label>
    <type>Text</type>
</CustomField>