unpackaged/main/default/objects/Account/fields/Account_taken_out_until__c.field-meta.xml
<CustomField>
    <fullName>Account_taken_out_until__c</fullName>
    <label>Account taken out until</label>
    <type>Date</type>
</CustomField>