unpackaged/main/default/objects/Account/fields/AccountDetail__c.field-meta.xml
<CustomField>
    <fullName>AccountDetail__c</fullName>
    <formula>Name + IF(customer_number__c != &#39;&#39;, &#39; (&#39; + customer_number__c + &#39;)&#39;, &#39;&#39; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountDetail</label>
    <type>Text</type>
</CustomField>