unpackaged/main/default/objects/Account/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <description>used for the initial Zuora sync</description>
    <formula>TEXT(Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountType</label>
    <type>Text</type>
</CustomField>