unpackaged/main/default/objects/Account/fields/Accounttype_by_Owner__c.field-meta.xml
<CustomField>
    <fullName>Accounttype_by_Owner__c</fullName>
    <formula>IF(CONTAINS(Owner.UserRole.Name,&quot;High Touch 1 Market 1&quot;),&quot;High Touch&quot;,
IF(CONTAINS(Owner.UserRole.Name,&quot;Mid Touch 1 Market 1&quot;),&quot;Mid Touch&quot;,
IF(CONTAINS(Owner.UserRole.Name,&quot;Tech Touch 1 Market 1&quot;),&quot;Tech Touch&quot;,

IF(AND(CONTAINS(Owner.UserRole.Name,&quot;High Touch&quot;), NOT(CONTAINS(Owner.UserRole.Name, &quot;Market 1&quot;))),&quot;Key Account International&quot;,
IF(AND(CONTAINS(Owner.UserRole.Name,&quot;Mid Touch&quot;), NOT(CONTAINS(Owner.UserRole.Name, &quot;Market 1&quot;))),&quot;SME International&quot;,
IF(AND(CONTAINS(Owner.UserRole.Name,&quot;Tech Touch&quot;), NOT(CONTAINS(Owner.UserRole.Name, &quot;Market 1&quot;))),&quot;SME International&quot;,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounttype by Owner</label>
    <type>Text</type>
</CustomField>