unpackaged/main/default/objects/Account/fields/AdditionalCompanyInformation__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCompanyInformation__c</fullName>
    <label>AdditionalCompanyInformation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>