unpackaged/main/default/objects/Account/fields/affiliate_link__c.field-meta.xml
<CustomField>
    <fullName>affiliate_link__c</fullName>
    <label>Affiliate-Link</label>
    <type>Url</type>
</CustomField>