unpackaged/main/default/objects/Account/fields/AffiliateId__c.field-meta.xml
<CustomField>
    <fullName>AffiliateId__c</fullName>
    <externalId>true</externalId>
    <label>AffiliateId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>