unpackaged/main/default/objects/Account/fields/Age_assigned_to_discarded__c.field-meta.xml
<CustomField>
    <fullName>Age_assigned_to_discarded__c</fullName>
    <description>for Sales: age between assignment date and discarded date</description>
    <formula>IF(
AND(
NOT (ISNULL (Discarded_Date__c )), 
NOT (ISNULL (Last_assignment_to_sales_rep__c)),
Last_discarded_by__r.Id =  Previous_owner_main__r.Id),
Discarded_Date__c   -  Last_assignment_to_sales_rep__c,
00
)</formula>
    <label>Age assigned to discarded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>