unpackaged/main/default/objects/Account/fields/Age_assigned_to_First_Activity__c.field-meta.xml
<CustomField>
    <fullName>Age_assigned_to_First_Activity__c</fullName>
    <formula>IF(
AND(
NOT (ISNULL (First_activity_after_owner_change__c )),
NOT (ISNULL (Last_assignment_to_sales_rep__c))),
First_activity_after_owner_change__c - Last_assignment_to_sales_rep__c,
00
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age assigned to First Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>