unpackaged/main/default/objects/Account/fields/Agency_C_Pool__c.field-meta.xml
<CustomField>
    <fullName>Agency_C_Pool__c</fullName>
    <description>only used for RT &quot;Partner&quot;
dependent on field &quot;Agency Pool&quot;</description>
    <label>Agency C-Pool</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Agency_Pool__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>