unpackaged/main/default/objects/Account/fields/Agency_Pool__c.field-meta.xml
<CustomField>
    <fullName>Agency_Pool__c</fullName>
    <description>only used for RT &quot;Partner&quot;</description>
    <label>Agency Pool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>