unpackaged/main/default/objects/Account/fields/All_Opps_Closed__c.field-meta.xml
<CustomField>
    <fullName>All_Opps_Closed__c</fullName>
    <formula>IF( Number_of_Opps__c &gt; 0 , Number_of_Closed_Opps__c = Number_of_Opps__c , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Opps Closed</label>
    <type>Checkbox</type>
</CustomField>