unpackaged/main/default/objects/Account/fields/assigned_to_lead_pool__c.field-meta.xml
<CustomField>
    <fullName>assigned_to_lead_pool__c</fullName>
    <label>Assigned to Lead Pool</label>
    <type>DateTime</type>
</CustomField>