unpackaged/main/default/objects/Account/fields/At_Least_1_Contact_Actively_Sequenced__c.field-meta.xml
<CustomField>
    <fullName>At_Least_1_Contact_Actively_Sequenced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Least 1 Contact Actively Sequenced</label>
    <type>Checkbox</type>
</CustomField>