unpackaged/main/default/objects/Account/fields/Average_Shopping_Basket__c.field-meta.xml
<CustomField>
    <fullName>Average_Shopping_Basket__c</fullName>
    <label>Average Shopping Basket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>