unpackaged/main/default/objects/Account/fields/Billing_Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Currency__c</fullName>
    <label>Billing Account Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>PLN</fullName>
            </value>
            <value>
                <fullName>RON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>