unpackaged/main/default/objects/Account/fields/Billing_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Number__c</fullName>
    <description>please use Account Customer Number or Billing Account Number instead
Reporting Team replaced the field (PO-5642)</description>
    <label>[DEPRECATED] Billing Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>