unpackaged/main/default/objects/Account/fields/Billing_Account_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Payment_Method__c</fullName>
    <label>Billing Account Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>