unpackaged/main/default/objects/Account/fields/Billing_Account_Zuora_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_Zuora_ID__c</fullName>
    <label>Billing Account Zuora ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>