unpackaged/main/default/objects/Account/fields/BillToContact__c.field-meta.xml
<CustomField>
    <fullName>BillToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Zuora Billing Contact</description>
    <label>BillToContact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (BillToContact)</relationshipLabel>
    <relationshipName>BillToContact_for</relationshipName>
    <type>Lookup</type>
</CustomField>