unpackaged/main/default/objects/Account/fields/Buyer_Persona__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Persona__c</fullName>
    <label>Buyer Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oskar - DACH</fullName>
            </value>
            <value>
                <fullName>Isabelle - DACH</fullName>
            </value>
            <value>
                <fullName>Christian - UK/RoW</fullName>
            </value>
            <value>
                <fullName>Richard - UK/RoW</fullName>
            </value>
            <value>
                <fullName>Sanne - NL</fullName>
            </value>
            <value>
                <fullName>Ramon - NL</fullName>
            </value>
            <value>
                <fullName>Julien - FR</fullName>
            </value>
            <value>
                <fullName>Silvia - IT</fullName>
            </value>
            <value>
                <fullName>Martina - ES</fullName>
            </value>
            <value>
                <fullName>Marek - PL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>