unpackaged/main/default/objects/Account/fields/Call_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Call_Attempts__c</fullName>
    <label>Call Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>