unpackaged/main/default/objects/Account/fields/Callback__c.field-meta.xml
<CustomField>
    <fullName>Callback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>callback entered after the account was created</description>
    <inlineHelpText>callback already existing in SF</inlineHelpText>
    <label>Callback</label>
    <type>Checkbox</type>
</CustomField>