unpackaged/main/default/objects/Account/fields/Cancellation_Period__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Period__c</fullName>
    <defaultValue>3</defaultValue>
    <description>no decimal spaces intended. All decimal numbers will round up/down to the full number.</description>
    <inlineHelpText>Please contact the Contract team to adjust the cancellation period.</inlineHelpText>
    <label>Cancellation Period</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>