unpackaged/main/default/objects/Account/fields/CaseStudyUrl__c.field-meta.xml
<CustomField>
    <fullName>CaseStudyUrl__c</fullName>
    <label>CaseStudyUrl</label>
    <type>Url</type>
</CustomField>