unpackaged/main/default/objects/Account/fields/Certificates_disabled__c.field-meta.xml
<CustomField>
    <fullName>Certificates_disabled__c</fullName>
    <label>Certificates disabled</label>
    <summaryFilterItems>
        <field>shop__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Customer Shop</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>shop__c.certificateStatus__c</field>
        <operation>equals</operation>
        <value>disabled</value>
    </summaryFilterItems>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>