unpackaged/main/default/objects/Account/fields/commercial_register_number__c.field-meta.xml
<CustomField>
    <fullName>commercial_register_number__c</fullName>
    <label>Commercial Register Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>