unpackaged/main/default/objects/Account/fields/Company_Proof_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Proof_Date__c</fullName>
    <description>Date field to register when the &#39;Company proof&#39; field was set.</description>
    <label>Company Proof Date</label>
    <type>Date</type>
</CustomField>