unpackaged/main/default/objects/Account/fields/CompanyName__c.field-meta.xml
<CustomField>
    <fullName>CompanyName__c</fullName>
    <inlineHelpText>Used if the customer needs a different billing address on the invoice</inlineHelpText>
    <label>CompanyName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>