unpackaged/main/default/objects/Account/fields/CompanyProof__c.field-meta.xml
<CustomField>
    <fullName>CompanyProof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CompanyProof</label>
    <type>Checkbox</type>
</CustomField>