unpackaged/main/default/objects/Account/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <defaultValue>&quot;Competitor Name&quot;</defaultValue>
    <label>ONLY use when „happy with competitor“:</label>
    <length>125</length>
    <type>Text</type>
</CustomField>