unpackaged/main/default/objects/Account/fields/Competitor_Name_picklist__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name_picklist__c</fullName>
    <label>Competitor Name picklist</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Discarded_Information__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Competitors</valueSetName>
    </valueSet>
</CustomField>