unpackaged/main/default/objects/Account/fields/Compliance_Case_open__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Case_open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>set in Flow FLOW_CASE_UpdateAccountWithComplianceFlag triggered by PB_CASE_CSM</description>
    <label>Compliance Case open?</label>
    <type>Checkbox</type>
</CustomField>