unpackaged/main/default/objects/Account/fields/contact__c.field-meta.xml
<CustomField>
    <fullName>contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Is Company Contact for</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>