unpackaged/main/default/objects/Account/fields/contact_type__c.field-meta.xml
<CustomField>
    <fullName>contact_type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
                <isActive>false</isActive>
                <label>Indirect</label>
            </value>
            <value>
                <fullName>MQL</fullName>
                <isActive>false</isActive>
                <label>MQL</label>
            </value>
            <value>
                <fullName>tbd</fullName>
                <isActive>false</isActive>
                <label>tbd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>