unpackaged/main/default/objects/Account/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>only used for type = strategic partner</description>
    <inlineHelpText>Only fill if type = strategic partner!</inlineHelpText>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>