unpackaged/main/default/objects/Account/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <summarizedField>membership__c.Prime_yearly_price__c</summarizedField>
    <summaryForeignKey>membership__c.company_id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>