unpackaged/main/default/objects/Account/fields/Contract_Value_Partner__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value_Partner__c</fullName>
    <description>only used for type = strategic partner</description>
    <inlineHelpText>Only fill if type = strategic partner!</inlineHelpText>
    <label>Contract Value (Partner)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>