unpackaged/main/default/objects/Account/fields/Contracted_at__c.field-meta.xml
<CustomField>
    <fullName>Contracted_at__c</fullName>
    <label>Contracted at</label>
    <summarizedField>membership__c.contracted_at__c</summarizedField>
    <summaryForeignKey>membership__c.company_id__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>