unpackaged/main/default/objects/Account/fields/Count_Shop_Order_per_Year__c.field-meta.xml
<CustomField>
    <fullName>Count_Shop_Order_per_Year__c</fullName>
    <label>Count Shop Order per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>