unpackaged/main/default/objects/Account/fields/Created_Date_co__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_co__c</fullName>
    <defaultValue>DATE(1900,1,1)</defaultValue>
    <description>lass et</description>
    <label>Created Date co</label>
    <type>Date</type>
</CustomField>