unpackaged/main/default/objects/Account/fields/Created_Date_only__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_only__c</fullName>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date only</label>
    <type>DateTime</type>
</CustomField>