unpackaged/main/default/objects/Account/fields/Credit_Note_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Recipient_Email__c</fullName>
    <label>Credit Note Recipient Email</label>
    <type>Email</type>
</CustomField>