unpackaged/main/default/objects/Account/fields/Credit_Note_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Recipient_Name__c</fullName>
    <description>used for Partner Accounts</description>
    <label>Credit Note Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>