unpackaged/main/default/objects/Account/fields/cumulated_similarweb_global_rank__c.field-meta.xml
<CustomField>
    <fullName>cumulated_similarweb_global_rank__c</fullName>
    <label>Cumulated Similarweb Global Rank</label>
    <summarizedField>shop__c.similarweb_global_rank__c</summarizedField>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>