unpackaged/main/default/objects/Account/fields/customer_number__c.field-meta.xml
<CustomField>
    <fullName>customer_number__c</fullName>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>