unpackaged/main/default/objects/Account/fields/Customer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Customer_Profile__c</fullName>
    <label>Customer Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DACH - Malerversand</fullName>
            </value>
            <value>
                <fullName>DACH - Möbel Karmann</fullName>
            </value>
            <value>
                <fullName>Benelux, UK + Nordics</fullName>
            </value>
            <value>
                <fullName>ES, PT, IT, FR</fullName>
            </value>
            <value>
                <fullName>PL - Nowak Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>