unpackaged/main/default/objects/Account/fields/Customer_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segmentation__c</fullName>
    <label>Customer Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TECH_TOUCH</fullName>
                <label>Tech Touch</label>
            </value>
            <value>
                <fullName>MID_TOUCH</fullName>
                <label>Mid Touch</label>
            </value>
            <value>
                <fullName>HIGH_TOUCH</fullName>
                <label>High Touch</label>
            </value>
            <value>
                <fullName>SME-A</fullName>
                <isActive>false</isActive>
                <label>SME-A</label>
            </value>
            <value>
                <fullName>SME-B</fullName>
                <isActive>false</isActive>
                <label>SME-B</label>
            </value>
            <value>
                <fullName>SME-C</fullName>
                <isActive>false</isActive>
                <label>SME-C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>