unpackaged/main/default/objects/Account/fields/Data_Protection_Contact__c.field-meta.xml
<CustomField>
    <fullName>Data_Protection_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>all relevant data protection communication has to be sent to this contact</description>
    <label>Data Protection Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Data Protection Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>