unpackaged/main/default/objects/Account/fields/Date_of_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Onboarding__c</fullName>
    <description>This is only relevant for Spanish CSM/Teams</description>
    <label>Date of Onboarding</label>
    <type>Date</type>
</CustomField>