unpackaged/main/default/objects/Account/fields/Days_until_termination__c.field-meta.xml
<CustomField>
    <fullName>Days_until_termination__c</fullName>
    <formula>IF(ISPICKVAL(status__c, &quot;Cancelled&quot;),  Subscription_End_Date__c - today(),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until termination</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>