unpackaged/main/default/objects/Account/fields/delay_eTrusted_Migration_Reason__c.field-meta.xml
<CustomField>
    <fullName>delay_eTrusted_Migration_Reason__c</fullName>
    <label>delay eTrusted Migration Reason</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>