unpackaged/main/default/objects/Account/fields/Direct_Case_Owner_Routing__c.field-meta.xml
<CustomField>
    <fullName>Direct_Case_Owner_Routing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to introduce Customer Success Services - if boolean is true, cases related to this account will be automatically transferred to the account owner</description>
    <label>Direct Case Owner Routing</label>
    <type>Checkbox</type>
</CustomField>