unpackaged/main/default/objects/Account/fields/Discarded_Date__c.field-meta.xml
<CustomField>
    <fullName>Discarded_Date__c</fullName>
    <label>Last Discarded Date</label>
    <type>DateTime</type>
</CustomField>