unpackaged/main/default/objects/Account/fields/Discarded_Description__c.field-meta.xml
<CustomField>
    <fullName>Discarded_Description__c</fullName>
    <label>Discarded Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>