unpackaged/main/default/objects/Account/fields/Discarded_Information__c.field-meta.xml
<CustomField>
    <fullName>Discarded_Information__c</fullName>
    <label>Discarded Information</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>discarded_reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No (Valid) phone number</fullName>
            </value>
            <value>
                <fullName>No Onlineshop</fullName>
            </value>
            <value>
                <fullName>URL offline</fullName>
            </value>
            <value>
                <fullName>Exclusion catalogue</fullName>
            </value>
            <value>
                <fullName>No certification possible for this business concept</fullName>
            </value>
            <value>
                <fullName>Rejected by risk management</fullName>
            </value>
            <value>
                <fullName>Does not believe in TS effect</fullName>
            </value>
            <value>
                <fullName>Happy with competitor</fullName>
            </value>
            <value>
                <fullName>Pflichtfeld: which competitor?</fullName>
            </value>
            <value>
                <fullName>Optinal: Ablaufdatum des Vertrages</fullName>
            </value>
            <value>
                <fullName>Repeatedly not reached</fullName>
            </value>
            <value>
                <fullName>Soon out of business</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Too specialized</fullName>
            </value>
            <value>
                <fullName>Check agency potential</fullName>
            </value>
            <value>
                <fullName>No agency potential</fullName>
            </value>
            <value>
                <fullName>Provision too low</fullName>
                <label>Provision too low (partner only)</label>
            </value>
            <value>
                <fullName>No connection wanted</fullName>
                <label>No connection wanted (partner only)</label>
            </value>
            <value>
                <fullName>No ecommerce</fullName>
                <label>No ecommerce (partner only)</label>
            </value>
            <value>
                <fullName>Shopsoftware non certifiable</fullName>
            </value>
            <value>
                <fullName>Concentration on platforms (e.g Amazon, Etsy)</fullName>
            </value>
            <value>
                <fullName>Shop too small/just started</fullName>
            </value>
            <value>
                <fullName>Shop not ready</fullName>
            </value>
            <value>
                <fullName>Janolaw Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>