unpackaged/main/default/objects/Account/fields/discarded_reason__c.field-meta.xml
<CustomField>
    <fullName>discarded_reason__c</fullName>
    <label>Discarded Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Customer says no</fullName>
            </value>
            <value>
                <fullName>Lead Quality</fullName>
            </value>
            <value>
                <fullName>MQL trash (LM only)</fullName>
            </value>
            <value>
                <fullName>Rejected by TS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>