unpackaged/main/default/objects/Account/fields/doNotCreateShop__c.field-meta.xml
<CustomField>
    <fullName>doNotCreateShop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>https://aquilliance.atlassian.net/browse/PROTSH-91 - AW</description>
    <label>doNotCreateShop</label>
    <type>Checkbox</type>
</CustomField>