unpackaged/main/default/objects/Account/fields/Dunning_Info_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Info_Zuora__c</fullName>
    <formula>IF( Dunning_Level_Zuora__c &lt;&gt;&quot;0&quot;, &quot;Level: &quot; + Dunning_Level_Zuora__c + BR(), &quot;&quot;) +
IF( ISPICKVAL(Dunning_stop_Zuora__c,&quot;yes&quot;), &quot;Dunning Stop: &quot; + TEXT(Dunning_stop_Zuora__c)+ BR(), &quot;&quot;) +
IF( NOT(ISBLANK(Dunningstopdate__c)), &quot;Dunning Stop Date: &quot; + TEXT(Dunningstopdate__c)+ BR(), NULL)+
IF(  dunning_level__c &gt; 0, &quot;AR Rating: &quot; + TEXT(Forderungsbewertung__c) ,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dunning Info Zuora</label>
    <type>Text</type>
</CustomField>