unpackaged/main/default/objects/Account/fields/dunning_level__c.field-meta.xml
<CustomField>
    <fullName>dunning_level__c</fullName>
    <label>Dunning Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>