unpackaged/main/default/objects/Account/fields/Dunning_Level_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Level_Zuora__c</fullName>
    <label>Dunning Level Zuora</label>
    <length>1</length>
    <type>Text</type>
</CustomField>