unpackaged/main/default/objects/Account/fields/Dunning_Stop_Counter__c.field-meta.xml
<CustomField>
    <fullName>Dunning_Stop_Counter__c</fullName>
    <description>used in FLOW_ZuoraDunningStop_Button_Screen</description>
    <label>Dunning Stop Counter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>