unpackaged/main/default/objects/Account/fields/Dunning_stop_Zuora__c.field-meta.xml
<CustomField>
    <fullName>Dunning_stop_Zuora__c</fullName>
    <label>Dunning stop Zuora</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>