unpackaged/main/default/objects/Account/fields/Dunningstopdate__c.field-meta.xml
<CustomField>
    <fullName>Dunningstopdate__c</fullName>
    <label>Dunning stop date</label>
    <type>Date</type>
</CustomField>