unpackaged/main/default/objects/Account/fields/DunningStopReason__c.field-meta.xml
<CustomField>
    <fullName>DunningStopReason__c</fullName>
    <label>Dunning Stop Reason</label>
    <type>TextArea</type>
</CustomField>