unpackaged/main/default/objects/Account/fields/Effective_Date_of_Termination__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Termination__c</fullName>
    <inlineHelpText>termination effective date</inlineHelpText>
    <label>Effective Date of Termination</label>
    <type>Date</type>
</CustomField>