unpackaged/main/default/objects/Account/fields/Email_Campaign_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Campaign_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For LM</description>
    <label>Email Campaign Contact</label>
    <type>Checkbox</type>
</CustomField>