unpackaged/main/default/objects/Account/fields/Email_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Email_Onboarding__c</fullName>
    <description>This is only relevant for Spanish CSM/Teams</description>
    <label>Email Onboarding</label>
    <type>Date</type>
</CustomField>